# Practicas_Estructura_de_Datos

./: CMakeLists.txt
Practica 1/: Practica_1A.cpp  Practica_1B.cpp
Practica 10/: Ejercicio_10A.cpp
Practica 2/: Ejercicio_2A.cpp  Ejercicio_2B.cpp  Ejercicio_2G.cpp
Practica 3/: Ejercicio_3A.cpp  Ejercicio_3B.cpp
Practica 4/: Ejercicio_4A.cpp  Ejercicio_4B.cpp  Ejercicio_4C.cpp  Ejercicio_4D.cpp  Ejercicio_4E.cpp  Ejercicio_4F.cpp  Ejercicio_4G.cpp
Practica 5/: Ejercicio_5A.cpp  Ejercicio_5B.cpp  Ejercicio_5C.cpp  Ejercicio_5D.cpp  Ejercicio_5E.cpp
Practica 6/: Ejercicio_6A.cpp  Ejercicio_6B.cpp  Ejercicio_6C.cpp
Practica 7/: Ejercicio_7A.cpp  Ejercicio_7B.cpp  Ejercicio_7C.cpp
Practica 8/: Ejercicio_8A.cpp
Practica 9/: Ejercicio_9A.cpp  Ejercicio_9B.cpp
