cmake_minimum_required(VERSION 3.16)
project(Practicas)

set(CMAKE_CXX_STANDARD 14)




add_executable(Practica_1A "Practica 1/Practica_1A.cpp" "Practica 1/Practica_1B.cpp" "Practica 1/Practica_1C.cpp" "Practica 2/Ejercicio_2A.cpp")
set_target_properties(Practica_1A PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Practica 1/")


add_executable(Practica_1B "Practica 1/Practica_1B.cpp")
set_target_properties(Practica_1B PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Practica 1/")
add_executable(Practica_1C "Practica 1/Practica_1C.cpp")
set_target_properties(Practica_1C PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Practica 1/")
add_executable(Ejercicio_2A "Practica 2/Ejercicio_2A.cpp" "Practica 2/Ejercicio_2B.cpp" "Practica 2/Ejercicio_2C.cpp" "Practica 2/Ejercicio_2D.cpp" "Practica 2/Ejercicio_2E.cpp" "Practica 2/Ejercicio_2F.cpp" "Practica 2/Ejercicio_2G.cpp" "Practica 3/Ejercicio_3A.cpp" "Practica 3/Ejercicio_3B.cpp" "Practica 3/Ejercicio_3C.cpp" "Practica 3/Ejercicio_3D.cpp" "Practica 3/Ejercicio_3E.cpp" "Practica 4/Ejercicio_4A.cpp" "Practica 4/Ejercicio_4B.cpp" "Practica 4/Ejercicio_4C.cpp" "Practica 4/Ejercicio_4D.cpp" "Practica 4/Ejercicio_4E.cpp" "Practica 4/Ejercicio_4F.cpp" "Practica 4/Ejercicio_4G.cpp" "Practica 5/Ejercicio_5A.cpp" "Practica 5/Ejercicio_5B.cpp" "Practica 5/Ejercicio_5C.cpp" "Practica 5/Ejercicio_5D.cpp" "Practica 5/Ejercicio_5E.cpp" "Practica 6/Ejercicio_6A.cpp" "Practica 6/Ejercicio_6B.cpp" "Practica 6/Ejercicio_6C.cpp" "Practica 7/Ejercicio_7A.cpp" "Practica 7/Ejercicio_7B.cpp" "Practica 7/Ejercicio_7C.cpp" "Practica 8/Ejercicio_8A.cpp")
set_target_properties(Ejercicio_2A PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Practica 2/")
add_executable(Ejercicio_2B "Practica 2/Ejercicio_2B.cpp")
set_target_properties(Ejercicio_2B PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Practica 2/")
add_executable(Ejercicio_3C "Practica 3/Ejercicio_3C.cpp")
set_target_properties(Ejercicio_3C PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Practica 3/")
add_executable(Ejercicio_2D "Practica 2/Ejercicio_2D.cpp")
set_target_properties(Ejercicio_2D PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Practica 2/")
add_executable(Ejercicio_2E "Practica 2/Ejercicio_2E.cpp")
set_target_properties(Ejercicio_2E PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Practica 2/")
add_executable(Ejercicio_2F "Practica 2/Ejercicio_2F.cpp")
set_target_properties(Ejercicio_2F PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Practica 2/")
add_executable(Ejercicio_2G "Practica 2/Ejercicio_2G.cpp")
set_target_properties(Ejercicio_2G PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Practica 2/")
add_executable(Ejercicio_2C "Practica 2/Ejercicio_2C.cpp")
set_target_properties(Ejercicio_2C PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Practica 2/")
add_executable(Ejercicio_3A "Practica 3/Ejercicio_3A.cpp")
set_target_properties(Ejercicio_3A PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Practica 3/")
add_executable(Ejercicio_3B "Practica 3/Ejercicio_3B.cpp")
set_target_properties(Ejercicio_3B PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Practica 3/")

add_executable(Ejercicio_3D "Practica 3/Ejercicio_3D.cpp")
set_target_properties(Ejercicio_3D PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Practica 3/")
add_executable(Ejercicio_3E "Practica 3/Ejercicio_3E.cpp")
set_target_properties(Ejercicio_3E PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Practica 3/")
add_executable(Ejercicio_4A "Practica 4/Ejercicio_4A.cpp")
set_target_properties(Ejercicio_4A PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Practica 4/")
add_executable(Ejercicio_4B "Practica 4/Ejercicio_4B.cpp")
set_target_properties(Ejercicio_4B PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Practica 4/")
add_executable(Ejercicio_4C "Practica 4/Ejercicio_4C.cpp")
set_target_properties(Ejercicio_4C PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Practica 4/")
add_executable(Ejercicio_4D "Practica 4/Ejercicio_4D.cpp")
set_target_properties(Ejercicio_4D PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Practica 4/")
add_executable(Ejercicio_4E "Practica 4/Ejercicio_4E.cpp")
set_target_properties(Ejercicio_4E PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Practica 4/")
add_executable(Ejercicio_4F "Practica 4/Ejercicio_4F.cpp")
set_target_properties(Ejercicio_4F PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Practica 4/")
add_executable(Ejercicio_4G "Practica 4/Ejercicio_4G.cpp")
set_target_properties(Ejercicio_4G PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Practica 4/")
add_executable(Ejercicio_5A "Practica 5/Ejercicio_5A.cpp")
set_target_properties(Ejercicio_5A PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Practica 5/")
add_executable(Ejercicio_5B "Practica 5/Ejercicio_5B.cpp")
set_target_properties(Ejercicio_5B PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Practica 5/")
add_executable(Ejercicio_5C "Practica 5/Ejercicio_5C.cpp")
set_target_properties(Ejercicio_5C PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Practica 5/")
add_executable(Ejercicio_5D "Practica 5/Ejercicio_5D.cpp")
set_target_properties(Ejercicio_5D PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Practica 5/")
add_executable(Ejercicio_5E "Practica 5/Ejercicio_5E.cpp")
set_target_properties(Ejercicio_5E PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Practica 5/")
add_executable(Ejercicio_6A "Practica 6/Ejercicio_6A.cpp")
set_target_properties(Ejercicio_6A PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Practica 6/")
add_executable(Ejercicio_6B "Practica 6/Ejercicio_6B.cpp")
set_target_properties(Ejercicio_6B PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Practica 6/")
add_executable(Ejercicio_6C "Practica 6/Ejercicio_6C.cpp")
set_target_properties(Ejercicio_6C PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Practica 6/")
add_executable(Ejercicio_7A "Practica 7/Ejercicio_7A.cpp")
set_target_properties(Ejercicio_7A PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Practica 7/")
add_executable(Ejercicio_7B "Practica 7/Ejercicio_7B.cpp")
set_target_properties(Ejercicio_7B PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Practica 7/")
add_executable(Ejercicio_7C "Practica 7/Ejercicio_7C.cpp")
set_target_properties(Ejercicio_7C PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Practica 7/")
add_executable(Ejercicio_8A "Practica 8/Ejercicio_8A.cpp")
set_target_properties(Ejercicio_8A PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Practica 8/")